--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
+:where(h1, h2, h3, h4, h5, h6) { margin: 0; }
+
 body {
   font-family: "Roboto", sans-serif;
   color: #333;
