--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,13 @@
 
 :where(h1, h2, h3, h4, h5, h6) { margin: 0; }
 
+/* Fix Safari */
+html {
+  -webkit-text-size-adjust: 100%; /* stop auto-enlarge on iOS */
+  text-size-adjust: 100%;
+  font-size: 16px;                /* explicit rem base */
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #333;
