Download the PDF (no printing anymore)

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="download-actions">
-        <button type="button" onclick="window.print()">Download PDF</button>
+        <a class="download-link" href="/resume.pdf" download>Download PDF</a>
     </div>
     <div class="page">
         {{ content | safe }}
