Download doesn't download anymore...

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="download-actions">
-        <a class="download-link" href="/resume.pdf" download>Download PDF</a>
+        <a class="download-link" href="/resume.pdf">Download PDF</a>
     </div>
     <div class="page">
         {{ content | safe }}
