Move things around

--- a/_includes/layout-responsive.njk
+++ b/_includes/layout-responsive.njk
@@ -12,7 +12,7 @@
       <div class="top-bar__links">
         <a class="download-link" href="/resume.pdf">Download PDF</a>
         <a class="print-link" href="#" onclick="window.print(); return false;">Print</a>
-        <a class="original-link" href="/">PDF layout view</a>
+        <a class="original-link" href="/print_preview/">PDF layout view</a>
       </div>
     </header>
     <main class="page-content">
