--- a/src/index.njk
+++ b/src/index.njk
@@ -7,16 +7,23 @@ permalink: index.html
   <div class="intro__heading">
     <h1 class="intro__name">{{ cv.name }}</h1>
     <ul class="contact-list">
+      {% set contactEmail = (contact and contact.email) or '' %}
+      {% set contactPhone = (contact and contact.phone) or '' %}
+      {% set contactPhoneHref = contactPhone | replace(' ', '') | replace('(', '') | replace(')', '') %}
+      {% if contactEmail %}
       <li>
-        <a href="mailto:{{ cv.contact.email }}">
-          {{ cv.contact.email }}
+        <a href="mailto:{{ contactEmail }}">
+          {{ contactEmail }}
         </a>
       </li>
+      {% endif %}
+      {% if contactPhone %}
       <li>
-        <a href="tel:{{ cv.contact.phone | replace(' ', '') | replace('(', '') | replace(')', '') }}">
-          {{ cv.contact.phone }}
+        <a href="tel:{{ contactPhoneHref }}">
+          {{ contactPhone }}
         </a>
       </li>
+      {% endif %}
       <li>
         <a href="{{ cv.contact.website }}" target="_blank" rel="noopener">
           {{ cv.contact.website | replace('https://', '') | replace('http://', '') | replace('www.', '') | trim }}
