Add link from print preview to home / index

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -12,6 +12,7 @@
 <body>
     <div class="download-actions">
         <a class="download-link" href="/resume.pdf">Download PDF</a>
+        <a class="download-link" href="/">View responsive resume</a>
     </div>
     <div class="page">
         {{ content | safe }}
