--- a/src/index.njk
+++ b/src/index.njk
@@ -63,6 +63,8 @@ permalink: index.html
     <h2>Professional Experience</h2>
   </div>
   <ol class="experience-list">
+    {% set includedTags = (cv.tags and cv.tags.included) or [] %}
+    {% set includeAllTags = 'all' in includedTags %}
     {% for job in cv.experience %}
     <li class="experience-list__item">
       <header class="experience-list__header">
@@ -83,7 +85,17 @@ permalink: index.html
       {% if job.achievements %}
       <ul class="experience-list__achievements">
         {% for item in job.achievements %}
-        <li>{{ item }}</li>
+        {% set achievementText = item.text or item %}
+        {% set achievementTags = item.tags or [] %}
+        {% set isIncluded = includeAllTags %}
+        {% if not isIncluded and includedTags and achievementTags %}
+          {% for tag in achievementTags %}
+            {% if tag in includedTags %}
+              {% set isIncluded = true %}
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+        <li class="experience-list__achievement{% if not isIncluded %} experience-list__achievement--excluded{% endif %}">{{ achievementText }}</li>
         {% endfor %}
       </ul>
       {% endif %}
