Hide print preview page links from production mode

--- a/_includes/layout-responsive.njk
+++ b/_includes/layout-responsive.njk
@@ -8,12 +8,15 @@
 </head>
 <body>
   <div class="page-shell">
+    {% set currentEnvironment = environment or 'development' %}
+    {% if currentEnvironment != 'production' %}
     <header class="top-bar">
       <div class="top-bar__links">
         <a class="download-link" href="/resume.pdf">Download PDF</a>
         <a class="original-link" href="/print_preview/">PDF layout view</a>
       </div>
     </header>
+    {% endif %}
     <main class="page-content">
       {{ content | safe }}
     </main>
