--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="/css/print.css">
 </head>
 <body>
+    {% set currentEnvironment = environment or 'development' %}
     <div class="download-actions">
         <a class="download-link" href="/">View responsive resume</a>
+        {% if currentEnvironment != 'production' %}
         <a class="download-link" href="/resume.pdf">Download PDF</a>
+        {% endif %}
     </div>
     <div class="page">
         {{ content | safe }}
