--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -1,3 +1,5 @@
+{% set currentEnvironment = environment or 'development' %}
+{% set umami = umamiTracking or {} %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +10,11 @@
     <link rel="stylesheet" href="/css/display.css">
     <link rel="stylesheet" href="/css/sections.css">
     <link rel="stylesheet" href="/css/print.css">
+    {% if currentEnvironment == 'production' and umami.enabled %}
+    <script defer src="{{ umami.scriptSrc }}" data-website-id="{{ umami.websiteId }}"></script>
+    {% endif %}
 </head>
 <body>
-    {% set currentEnvironment = environment or 'development' %}
     <div class="download-actions">
         <a class="download-link" href="/">View responsive resume</a>
         {% if currentEnvironment != 'production' %}
