--- a/css/sections.css
+++ b/css/sections.css
@@ -31,6 +31,16 @@ h3 {
   text-decoration: underline;
 }
 
+.contact-info .contact-resume {
+  flex-basis: 100%;
+  font-size: 0.85rem;
+  color: #777;
+}
+
+.contact-info .contact-resume a {
+  color: inherit;
+}
+
 .summary p {
   margin: 0;
 }
