--- a/_includes/layout-responsive.njk
+++ b/_includes/layout-responsive.njk
@@ -24,6 +24,13 @@
     <main class="page-content">
       {{ content | safe }}
     </main>
+    {% if cv.contact and cv.contact.githubRepo %}
+    <footer class="page-shell__repo">
+      <a class="repo-link" href="{{ cv.contact.githubRepo }}" target="_blank" rel="noopener">
+        View this project on GitHub
+      </a>
+    </footer>
+    {% endif %}
   </div>
 </body>
 </html>
